--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -2,6 +2,7 @@
   color: white;
   object-fit: contain;
   height: 448px;
+  border-radius: 7px;
 }
 
 @media (min-width: 1500px) {
@@ -65,12 +66,16 @@ padding-bottom: 0.5rem;
   height: 80px;
 }
 
+/* 배너 이미지 하단에 그림자스타일. 
+이거때문에 뷰포트 축소되면 이상하게 나와서 주석처리함. 
+없으니까 또 밋밋함. 나중에 다시 처리해주기.*/
 .banner--fadeBottom {
   height: 7.4rem;
   background-image: linear-gradient(180deg,
-          transparent,
+          /* transparent,
           rgba(37, 37, 37, 0.61),
-          #111);
+          #111 */
+          );
 }
 
 .banner__buttons {
