--- a/src/components/Row.css
+++ b/src/components/Row.css
@@ -135,3 +135,34 @@
   font-size: 1.3rem !important;
   font-weight: 600 !important;
 }
+
+.swiper-pagination {
+  text-align: right !important;
+}
+
+/* 원래 있던 디폴트값을 !important로 덧칠 */
+.swiper-pagination-bullet {
+  background: gray !important;
+  opacity: 1 !important;
+}
+
+.swiper-pagination-bullet-active {
+  background-color: white !important;
+}
+
+.swiper-button-prev {
+  color: white !important;
+}
+
+.swiper-button-next{
+  color: white !important;
+}
+
+.swiper-button-prev::after, .swiper-button-next::after{
+  font-size: 1.3rem !important;
+  font-weight: 600 !important;
+}
+
+.swiper-button-prev:hover, .swiper-button-next:hover{
+  transform: scale(1.1);
+}
